test/bad/generics/type05.px

func f<Num T>(T x) def
    x = 3
